# DarkCastle

./: .bash_history  .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.devel  Dockerfile.prod  README.md  SECURITY.md  compose.yaml  dcastle.dsp  dcastle.dsw  docker-compose.yml  mirror.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ccpp.yml  codeql-analysis.yml  workflow.yml
archive/: .gitignore
blog/: .gitignore
docs/: skills.txt
lib/: .gitignore  auctionhouse  emoting-objects.txt  help_key.txt  leaderboard.txt  messages.txt  messages2.txt  mobindex  new_help.txt  new_help_screen.txt  new_ihelp_screen.txt  objectindex  onlinewho.txt  playerhints.txt  quests.txt  social.txt  tinyworld.shp  wizlist.txt  worldindex  zoneindex
lib/mobs/: 00000-0193.mob  00200-0251.mob  01900-1999.mob  03000-3177.mob  05258-05258.mob  05400-5699.mob  10000-10017.mob  21900-21999.mob
lib/portal/: portal.arcana  portal.enterprise  portal.ship1  portal.ship2  portal.ship3  portal.ship4  portal.ship5  portal.ship6  portal.tower  portal.wagon
lib/world/: 00000-49.txt  00200-299.txt  01900-1999.txt  03001-3099.txt  05258-05258.txt  05400-5499.txt  21900-21999.txt  23000-23999-shoppingbazaar.txt  6345.txt
lib/zonefiles/: 00049-boardsmegaphones.zon  00200-299.zon  01999-empty.zon  03099-NSorpigal.zon  05258-broker.zon  05499-mudschool.zon  06345.zon  21900-21999.zon  23999-bazaar.zon
public_html/: .project  common.inc.php  editor.php  index.php  login.php  logout.php  utils.php
scripts/: .gitignore  backup_dc.sh  badvaults.sh  build.sh  buildimages.sh  cores.sh  findalt.sh  gdb.script  import.php  importlog.php  lastcore.sh  rebuild.sh  showplayerxp.cpp  shut.tt
src/: .cvsignore  .gitignore  Account.cpp  Affect.cpp  Backend.cpp  Backend.h  Boot  Bootgdb  CMakeLists.txt  Command.cpp  Command.h  CommandStack.cpp  CommandStack.h  Connection.cpp  DC.cpp  DC.h  DC_global.h  DataSource.cpp  Database.cpp  Database.h  Direction.cpp  Doxyfile  Entity.h  Leaderboard.cpp  Leaderboard.h  LegacyFile.cpp  LegacyFile.h  Makefile  Makefile.old  MobActivity.cpp  MobActivity.h  Room.cpp  SConstruct  SSH.cpp  SSH.h  Shops.cpp  Shops.h  Timer.cpp  Timer.h  Trace.cpp  (+154 more)
src/Backend/: Backend.h  Database.cpp  Database.h
src/benchmarks/: benchmarkDC.cpp  benchmark_utility.cpp
src/class/: cl_barbarian.cpp  cl_cleric.cpp  cl_mage.cpp  cl_monk.cpp  cl_paladin.cpp  cl_ranger.cpp  cl_thief.cpp  cl_warrior.cpp
src/include/: DC.h  Leaderboard.h  MobActivity.h  Timer.h  act.h  affect.h  alias.h  arena.h  bandwidth.h  character.h  clan.h  combinables.h  comm.h  connect.h  const.h  db.bak  db.h  db.h.old  dc_xmlrpc.h  event.h  fight.h  fileinfo.h  game_portal.h  game_portal.h~  guild.h  handler.h  ident.h  innate.h  interp.h  inventory.h  isr.h  ki.h  language.h  levels.h  machine.h  magic.h  memory.h  mobile.h  newedit.h  obj.h  (+20 more)
src/include/DC/: Arena.h  Command.h  CommandStack.h  DC.h  DC_global.h  DataSource.h  Database.h  Direction.h  Entity.h  Index.h  Leaderboard.h  MobActivity.h  Program.h  SSH.h  Shops.h  Timer.h  Trace.h  Version.h  Zone.h  act.h  affect.h  bandwidth.h  buildinfo.h  character.h  clan.h  class.h  combinables.h  comm.h  common.h  connect.h  const.h  corpse.h  db.h  dc_xmlrpc.h  event.h  fight.h  fileinfo.h  game_portal.h  guild.h  handler.h  (+37 more)
src/tests/: TestDC.cpp  testDC.cpp  test_utility.cpp
src/wizard/: .cvsignore  wiz_101.cpp  wiz_102.cpp  wiz_103.cpp  wiz_104.cpp  wiz_105.cpp  wiz_106.cpp  wiz_107.cpp  wiz_108.cpp  wiz_109.cpp  wiz_110.cpp  wizard.cpp  wizard.h
